--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.ComposeLambda" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/teal_700</item>
-        <item name="colorAccent">@color/purple_500</item>
-        <item name="android:statusBarColor">@color/purple_500</item>
+        <item name="colorPrimary">@color/indigo</item>
+        <item name="colorPrimaryDark">@color/indigo_deep</item>
+        <item name="colorAccent">@color/indigo</item>
+        <item name="android:statusBarColor">@color/indigo_deep</item>
     </style>
 </resources>
